--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -7,19 +7,27 @@ body {
 
 h1 {
 	text-align: center;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 div.container {
   width: 100%;
-  margin:auto;
+  /*margin-right:auto;*/
+  /*margin-left: auto;*/
 }
 
 div.food {
 	background-color: grey;
 	color: white;
-	border: 2px solid black;
-	margin: 10px;
-	position: relative;
+	/*border: 2px solid black;*/
+
+  margin-top: 10%;
+
+	/*position: relative;*/
+  /*width: 90%;*/
+	margin-left: auto;
+  margin-right: auto;
 
 }
 
@@ -34,7 +42,7 @@ div.description {
 	color: white;
 	text-align: center;
 	background-color: maroon;
-	position: absolute;
+	float: right;
 	top: 0px;
 	right: 0px;
 
@@ -49,7 +57,7 @@ div.description {
 	color: black;
 	text-align: center;
 	background-color: teal;
-	position: absolute;
+	float: right;
 	top: 0px;
 	right: 0px;
 
@@ -64,7 +72,7 @@ div.description {
 	color: black;
 	text-align: center;
 	background-color: brown;
-	position: absolute;
+	float: right;
 	top: 0px;
 	right: 0px;
 	
@@ -78,7 +86,8 @@ div.description {
 
 @media (min-width: 992px) {
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-		float: left;
+		
+    border: 5px solid blue;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -118,10 +127,11 @@ div.description {
   }
 }
 
-
+/*
 @media (min-width: 768px) and (max-width: 991px) {
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
  		float: left;
+    border: 6px solid black;
   }
   .col-md-1 {
     width: 8.33%;
@@ -160,8 +170,8 @@ div.description {
     width: 100%;
   }
 }
-
+/*
 @media (max-width: 767px) {
 
-}
+}*/
 
