--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -1,93 +1,81 @@
 * {
 	box-sizing: border-box;
+  font-family: "Helvetica Neue",Helvetica, Arial, sans-serif;
 }
+
 body {
 	background-color: white;
 }
 
 h1 {
 	text-align: center;
-  margin-bottom: 15px;
-  margin-top: 15px;
+  font-weight: 800;
+  font-size: 1.75em;
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
 
 div.container {
+  margin-top: 5%;
+  margin-bottom: 5%;
   width: 100%;
-  /*margin-right:auto;*/
-  /*margin-left: auto;*/
+
 }
+
 
 div.food {
 	background-color: grey;
 	color: white;
-	/*border: 2px solid black;*/
-
-  margin-top: 10%;
-
-	/*position: relative;*/
-  /*width: 90%;*/
-	margin-left: auto;
-  margin-right: auto;
-
+  margin-right: 5%;
+  margin-left: 5%;
+  border: 1px solid black; 
 }
 
 div.description {
 
-	padding: 10px 10px 0px 10px;
-	margin: 30px 5px 5px 5px;
+	padding: 10px 10px 5px 10px;
+	margin: 40px 5px 5px 5px;
 }
 
+div.title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.25em;
+  float: right;
+  top: 0px;
+  right: 0px;
+
+  padding-top: 5px;
+  padding-bottom: 5px;
+  width: 150px;
+
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
+}
 
 #sushi {
 	color: white;
 	text-align: center;
-	background-color: maroon;
-	float: right;
-	top: 0px;
-	right: 0px;
-
-	padding: 5px 50px 5px 50px;
-	width: 150px;
-
-	border-bottom: 2px solid black;
-	border-left: 2px solid black;
+	background-color: maroon;  
 }
 
 #beef {
 	color: black;
 	text-align: center;
 	background-color: teal;
-	float: right;
-	top: 0px;
-	right: 0px;
-
-	padding: 5px 50px 5px 50px;
-	width: 150px;
-
-	border-bottom: 2px solid black;
-	border-left: 2px solid black;
 }
 
 #chicken {
 	color: black;
 	text-align: center;
 	background-color: brown;
-	float: right;
-	top: 0px;
-	right: 0px;
-	
-	padding: 5px 50px 5px 50px;
-	width: 150px;
-
-	border-bottom: 2px solid black;
-	border-left: 2px solid black;
 }
 
 
 @media (min-width: 992px) {
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-		
-    border: 5px solid blue;
+		float: left;
+
   }
   .col-lg-1 {
     width: 8.33%;
@@ -127,11 +115,11 @@ div.description {
   }
 }
 
-/*
+
 @media (min-width: 768px) and (max-width: 991px) {
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
  		float: left;
-    border: 6px solid black;
+    margin-top: 2%;
   }
   .col-md-1 {
     width: 8.33%;
@@ -169,9 +157,17 @@ div.description {
   .col-md-12 {
     width: 100%;
   }
-}
-/*
-@media (max-width: 767px) {
+  
 
-}*/
+}
+
+
+@media (max-width: 767px) {
+  div.food {
+    border: 2px solid black;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+  }
+}
 
